--- a/index.html
+++ b/index.html
@@ -12,28 +12,58 @@
 			src="https://kit.fontawesome.com/3d7349b3f4.js"
 			crossorigin="anonymous"
 		></script>
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+			integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+			crossorigin="anonymous"
+		/>
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
 		<title>Home Page</title>
 	</head>
 	<body>
-		<nav>
-			<div class="logo">
-				<h4>The Nav</h4>
+			<h1>Tammy Lloyd Photography</h1>
+			<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button
+						type="button"
+						class="navbar-toggle collapsed"
+						data-toggle="collapse"
+						data-target="#bs-nav-demo"
+						aria-expanded="false"
+					>
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="index.html" class="navbar-brand">Tammy Lloyd</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-nav-demo">
+				<ul class="nav navbar-nav">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="About.html">About</a></li>
+				</ul>
+			
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
 			</div>
-			<ul class="nav-links">
-				<li><a href="#"></a>About</li>
-				<li><a href="#"></a>Gallery</li>
-				<li><a href="#"></a>Contact</li>
-			</ul>
-			<div class="burger">
-				<div class="line1"></div>
-				<div class="line2"></div>
-				<div class="line3"></div>
+			</div>
 			</div>
 		</nav>
 
-		<h1>Tammy Lloyd Photography</h1>
-
-		<script src="js/scripts.js"></script>
+	<script
+			src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+			integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
