--- a/gallery.html
+++ b/gallery.html
@@ -40,76 +40,73 @@
 					<a href="index.html" class="navbar-brand">Tammy Lloyd</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-nav-demo">
-				<ul class="nav navbar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="About.html">About</a></li>
-				</ul>
-			
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
-			</div>
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="About.html">About</a></li>
+					</ul>
+
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="gallery.html">Gallery</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
 			</div>
 		</nav>
-                <h1>Gallery</h1>
-             <div class="container">
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                   <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                  <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                </div>
-                <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                   <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                  <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-            </div>
-                <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-            
-                <div class="col-md-4 col-sm-6">
-                   <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                  <div class="thumbnail">
-                    <img src="assets/images/proud_mary.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
+		<h1>Gallery</h1>
+		<div class="container"></div>
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/proud_mary.jpg" />
+				</div>
+			</div>
+		</div>
+
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
