Added images to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -57,52 +57,52 @@
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/bayou.jpg" />
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/star_fish.JPG" />
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4 col-sm-6">
-				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-6">
-				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/barn.JPG" />
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/howlin_wolf.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/wooden_house.jpg" />
+				</div>
+			</div>
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/river.jpg" />
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-sm-6">
+				<div class="thumbnail">
+					<img src="assets/images/carousel_horses.jpg" />
 				</div>
 			</div>
 
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/nola.jpg" />
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="assets/images/proud_mary.jpg" />
+					<img src="assets/images/crawfish_boil.jpg" />
 				</div>
 			</div>
 		</div>
