Added social media icons and responsive design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<title>Home Page</title>
 	</head>
 	<body>
-		<h1>Tammy Lloyd Photography</h1>
+		<h1 class="header">Tammy Lloyd Photography</h1>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
@@ -53,7 +53,23 @@
 				</div>
 			</div>
 		</nav>
-
+		<div class="col-md-4 social-med">
+			<a
+				href="https://www.facebook.com/trudyjonesdev/?view_public_for=108301557335730"
+				class="fab fa-facebook-square"
+				target="_blank"
+			></a>
+			<a
+				href="https://twitter.com/at_trudyjones"
+				class="fab fa-twitter-square"
+				target="_blank"
+			></a>
+			<a
+				href="https://www.instagram.com/at_trudyjones/"
+				class="fab fa-instagram"
+				target="_blank"
+			></a>
+		</div>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
