--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
 				</div>
 			</div>
 		</nav>
-		<h1>Gallery</h1>
+		<h1 class="header">Gallery</h1>
 		<div class="container"></div>
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
@@ -106,7 +106,23 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="col-md-4 social-med">
+			<a
+				href="https://www.facebook.com/trudyjonesdev/?view_public_for=108301557335730"
+				class="fab fa-facebook-square"
+				target="_blank"
+			></a>
+			<a
+				href="https://twitter.com/at_trudyjones"
+				class="fab fa-twitter-square"
+				target="_blank"
+			></a>
+			<a
+				href="https://www.instagram.com/at_trudyjones/"
+				class="fab fa-instagram"
+				target="_blank"
+			></a>
+		</div>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.min.js"
 			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
