Completed responsive design index & gallery pages

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,14 @@
 				</div>
 			</div>
 		</nav>
+		<!-- <div class="row"> -->
+		<!-- <div class="col-lg-6"> -->
+		<hr />
 		<h1 class="header">Gallery</h1>
+		<hr />
+		<!-- </div> -->
+		<!-- </div> -->
+
 		<div class="container"></div>
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
